js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/top-level-empty-str-is-valid-assign-expr.js
import
(
'
'
)
;
reportCompare
(
0
0
)
;
