js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-if-braceless-import-defer-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
if
(
true
)
import
.
defer
(
)
;
